# do not edit -- automatically generated by arch changelog
# arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.10
#

2005-08-01 15:13:21 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-26

    Summary:
      resources, use bobobase_modification_time for Zope 2 resources
    Revision:
      itools--main--0.10--patch-26


    modified files:
     Changelog handlers/Handler.py handlers/transactions.py
     resources/base.py resources/zope2.py


2005-08-01 12:55:58 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-25

    Summary:
      xml, discard comments not included in the root element
    Revision:
      itools--main--0.10--patch-25


    modified files:
     Changelog xml/XML.py


2005-08-01 12:54:13 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-24

    Summary:
      xml, correctly deal with CDATA sections
    Revision:
      itools--main--0.10--patch-24


    modified files:
     Changelog xml/parser.py


2005-08-01 12:22:42 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-23

    Summary:
      include itools.rss in the setup script
    Revision:
      itools--main--0.10--patch-23


    modified files:
     Changelog setup.py


2005-08-01 11:16:31 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-22

    Summary:
      merge RSS 2.0 code from Piotr
    Revision:
      itools--main--0.10--patch-22

    Patches applied:
    
     * piotr@macuk.pl--public/itools--rss--0.10--base-0
       tag of jdavid@itaapy.com--public/itools--main--0.10--patch-11
    
     * piotr@macuk.pl--public/itools--rss--0.10--patch-1
       The new rss package
    
     * piotr@macuk.pl--public/itools--rss--0.10--patch-2
       The new RSS handler.
    
     * piotr@macuk.pl--public/itools--rss--0.10--patch-3
       Spelling and style corrections, modification of the data structure and implementation of the missing to_unicode method.
    
     * piotr@macuk.pl--public/itools--rss--0.10--patch-4
       namespace structure change and implementation of the get_skeleton function