@@ -2,6 +2,18 @@
 # arch-tag: automatic-ChangeLog--jdavid@itaapy.com--public/itools--main--0.10
 #
 
+2005-08-01 17:30:56 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-27
+
+    Summary:
+      resources, now zope2 resources require Zope 2.8
+    Revision:
+      itools--main--0.10--patch-27
+
+
+    modified files:
+     Changelog resources/zope2.py
+
+
 2005-08-01 15:13:21 GMT	J. David Ibanez <jdavid@itaapy.com>	patch-26
 
     Summary:
